# super_hash

./: README.md  pyproject.toml
main/: setup.py
main/super_hash/: __init__.py  main.py
main/super_hash/__dependencies__/simple_namespace/: .gitrepo  README.md  pyproject.toml
main/super_hash/__dependencies__/simple_namespace/main/simple_namespace/: __init__.py
tests/: output.txt  test.py
