[tool.poetry]
name = "simple_namespace"
version = "0.1.0"
description = ""
authors = ["Jeff Hykin <jeff.hykin@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
pip = "20.1.1"
twine = "3.4.1"
"keyrings.alt" = "4.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
